fixed social button icon vertical alignment

--- a/docs/style.css
+++ b/docs/style.css
@@ -114,7 +114,7 @@ body {
     margin-left: 5px;
     margin-right: 5px;
     margin-bottom: 16px;
-    padding: 10px; /* 17px */
+    padding: 10px 10px 6px 10px; /* 17px */
     padding-left: 14px;
     padding-right: 14px;
     text-decoration: none;
